<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/source"
        android:title="@string/select_source"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nexus"
                    android:title="@string/nexus_hub"
                    android:checked="true"/>
                <item
                    android:id="@+id/market"
                    android:title="@string/warframe_market" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/sorting"
        android:title="@string/sort_duc_plat"
        app:showAsAction="never"/>
</menu>