<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:id="@+id/cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/image_item" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/text_view_plat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/platinum"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/text_view_duc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ducats"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_view_duc_plat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duc_plat"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>