<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_item"/>

    <ImageView
        android:id="@+id/item_image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image_item"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/item_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/item_view_duc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/ducats" />

        <TextView
            android:id="@+id/item_view_plat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/platinum" />

        <TextView
            android:id="@+id/item_view_duc_plat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/duc_plat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/storage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_label"
            android:gravity="center"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <TextView
            android:id="@+id/storage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            />

    </LinearLayout>

</LinearLayout>